2002-01-25  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/save.c (save_set_all): Removed unused variable. Fixed highly
 	probable typo this_arrow->layer in the middle of 'set label'
 	treatment.
	
2002-01-25  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS: Added some text from ANNOUNCE-MOUSE.

	* ANNOUNCE-MOUSE: Added a header to that file with two paragraphs 
	which are worth saving, in my opinion. That's a technical docs for
	mouse and its communication.

	* INSTALL: Added section "Running gnuplot on OS/2" from README.os2.

	* docs/old/README.os2: Added a note that this file can be removed.

	* config/makefile.cyg: Added -DHAVE_SLEEP -DNO_SETVBUF.

	* docs/gnuplot.doc: Several small corrections.

2002-01-24  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* FAQ: Updated to current version.

	* tutorial/Makefile.am.in: Rename PLT_SOURCES to PLT_FILES and add
	target for pdf.

	* specfun.c: Remove all code that was labeled for non-commercial use
	only (lgamneg, lgampos, lngamma, inverse_normal_func,
	inverse_error_func). This means that the gamma, inverse normal, and
	inverse error function are not available anymore on platforms that
	don't have native implementations.

2002-01-24  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/doc2tex.c: Replace typesetting of _ from "{\tt\_}" to "\_".

2002-01-24  Johannes Zellner  <johannes@zellner.org>

	* src/readline.c term/x11.trm: Implemented the non-buffered
	stdin for the X11 driver (and ONLY for the X11 driver) to solve
	problems with
	   1) escape sequences (like the "up" arrow),
	   2) pasting commands with the mouse.

2002-01-24  Johannes Zellner  <johannes@zellner.org>

	* src/gplt_x11.c term/x11.trm: Implemented rotated text for the x11
	driver.

2002-01-23  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* docs/gnuplot.doc: Fixed all-spaces line and spurious <TAB>
 	character.

2002-01-23  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/makefile.cyg: Improvements, easily editable options.
